# boids.experiment

./: .clang-format  .travis.yml  .valgrind.supp  .valgrindrc  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  appveyor.yml  boids.c  build.bat  cleanlist.c  cleanlist.h  my_macros.h  version.h
cmake/: .gitattributes  GetGitRevisionDescription.cmake  README  assumed-version  version.c.in
src/: CMakeLists.txt  boids.c  cleanlist.c  cleanlist.h  version.c.in  version.h
